HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeNestedKeyRule/Expected.uv
//! Expected diagnostic metadata for the SpeculativeNestedKeyRule rejected-source specimen.

expectedDiagnostic("E-CON-0090", "rule.19.K-Spec-No-Nested-Key")
